<resources>
    <string name="app_name">A33_Menu</string>
    <string name="action_settings">Settings</string>

    <string name="text_option_menu">OptionMenu 控制改变字体颜色</string>
    <string name="option_red">红色</string>
    <string name="option_yellow">黄色</string>
    <string name="option_green">绿色</string>
    <string name="option_blue">蓝色</string>

    <string name="text_context_menu">ContextMenu 长按改变字体颜色</string>

    <string name="text_sub_menu">SubMenu 改变字体颜色</string>
    
    <string name="btn_popup_menu">PopupMenu 改变字体颜色</string>
</resources>
