<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.rabbitb.brook.a33_menu.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_red"
        android:orderInCategory="3"
        android:title="@string/option_red" />
    <item
        android:id="@+id/action_yellow"
        android:title="@string/option_yellow"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/action_green"
        android:title="@string/option_green"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/action_blue"
        android:title="@string/option_blue"
        android:orderInCategory="4"/>

</menu>
